fix(login-register): hide vertical scrollbar

--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -6,6 +6,7 @@
   line-height: 1.3;
   color: #ffeba7;
   background-color: #1f2029;
+  overflow-y: hidden;
   overflow: hidden;
   height: 100vh;
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #12141d 100%);
